@@ -26,6 +26,7 @@ K  5978	NullPointerException in MimeUtility#quote()
 K  5987	support RFC 2359 COPYUID response code
 K  5989	Empty FROM Field causes Exception
 K  6004	Filename isn't parsed correctly if charset is not set
+K  6072	copying a DataHandler from a parsed message to a new message fails
 
 
 		  CHANGES IN THE 1.5.0 RELEASE
